Refactor code structure for improved readability and maintainability

--- a/notebooks/transformers/distilbert_sentiment.ipynb
+++ b/notebooks/transformers/distilbert_sentiment.ipynb
@@ -5,7 +5,7 @@
    "id": "59c36eb8",
    "metadata": {},
    "source": [
-    "Importing the transformer"
+    "Importing the transformer\n"
    ]
   },
   {
@@ -25,14 +25,23 @@
    "execution_count": 2,
    "id": "e2063cb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
+    "\n",
     "torch.backends.cudnn.deterministic = True\n",
     "RANDOM_SEED = 123\n",
     "torch.manual_seed(RANDOM_SEED)\n",
-    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(DEVICE)\n",
     "NUM_EPOCHS = 3"
    ]
   },
@@ -41,7 +50,7 @@
    "id": "af1e0953",
    "metadata": {},
    "source": [
-    "Download the IMDB movie dataset as CSV"
+    "Download the IMDB movie dataset as CSV\n"
    ]
   },
   {
@@ -62,9 +71,392 @@
     "    r = requests.get(url)\n",
     "    f.write(r.content)\n",
     "\n",
-    "with gzip.open('movie_data.csv.gz', 'rb') as f_in:\n",
-    "    with open('movie_data.csv', 'wb') as f_out:\n",
+    "with gzip.open(\"movie_data.csv.gz\", \"rb\") as f_in:\n",
+    "    with open(\"movie_data.csv\", \"wb\") as f_out:\n",
     "        shutil.copyfileobj(f_in, f_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bad4a94d",
+   "metadata": {},
+   "source": [
+    "Treat with pandas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bec5e35a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"../../datasets/movie_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "514bc76c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>In 1974, the teenager Martha Moxley (Maggie Gr...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OK... so... I really like Kris Kristofferson a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>***SPOILER*** Do not read this, if you think a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hi for all the people who have seen this wonde...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I recently bought the DVD, forgetting just how...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review  sentiment\n",
+       "0  In 1974, the teenager Martha Moxley (Maggie Gr...          1\n",
+       "1  OK... so... I really like Kris Kristofferson a...          0\n",
+       "2  ***SPOILER*** Do not read this, if you think a...          0\n",
+       "3  hi for all the people who have seen this wonde...          1\n",
+       "4  I recently bought the DVD, forgetting just how...          0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a021067b",
+   "metadata": {},
+   "source": [
+    "Train/test split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ef50d607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_texts, train_labels = (\n",
+    "    df.iloc[:35000][\"review\"].values,\n",
+    "    df.iloc[:35000][\"sentiment\"].values,\n",
+    ")\n",
+    "valid_texts, valid_labels = (\n",
+    "    df.iloc[35000:40000][\"review\"].values,\n",
+    "    df.iloc[35000:40000][\"sentiment\"].values,\n",
+    ")\n",
+    "test_texts, test_labels = (\n",
+    "    df.iloc[40000:][\"review\"].values,\n",
+    "    df.iloc[40000:][\"sentiment\"].values,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16c84586",
+   "metadata": {},
+   "source": [
+    "Tokenization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "06279370",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = DistilBertTokenizerFast.from_pretrained(\"distilbert-base-uncased\")\n",
+    "\n",
+    "train_encodings = tokenizer(list(train_texts), truncation=True, padding=True)\n",
+    "valid_encodings = tokenizer(list(valid_texts), truncation=True, padding=True)\n",
+    "test_encodings = tokenizer(list(test_texts), truncation=True, padding=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8836dd7c",
+   "metadata": {},
+   "source": [
+    "IMDBDataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "708556e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "\n",
+    "class IMDBDataset(Dataset):\n",
+    "    def __init__(self, encodings, labels):\n",
+    "        super().__init__()\n",
+    "        self.encodings = encodings\n",
+    "        self.labels = labels\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        item = {key: torch.tensor(val[index]) for key, val in self.encodings.items()}\n",
+    "        item[\"labels\"] = torch.tensor(self.labels[index])\n",
+    "        return item\n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)\n",
+    "\n",
+    "\n",
+    "train_dataset = IMDBDataset(train_encodings, train_labels)\n",
+    "test_dataset = IMDBDataset(test_encodings, test_labels)\n",
+    "valid_dataset = IMDBDataset(valid_encodings, valid_labels)\n",
+    "\n",
+    "batch_size = 16\n",
+    "\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "valid_dataloader = DataLoader(valid_dataset, batch_size=batch_size, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caa703d9",
+   "metadata": {},
+   "source": [
+    "Loading model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "214ed324",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using the `SDPA` attention implementation on multi-gpu setup with ROCM may lead to performance issues due to the FA backend. Disabling it to use alternative backends.\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DistilBertForSequenceClassification(\n",
+       "  (distilbert): DistilBertModel(\n",
+       "    (embeddings): Embeddings(\n",
+       "      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+       "      (position_embeddings): Embedding(512, 768)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "    (transformer): Transformer(\n",
+       "      (layer): ModuleList(\n",
+       "        (0-5): 6 x TransformerBlock(\n",
+       "          (attention): DistilBertSdpaAttention(\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          )\n",
+       "          (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "          (ffn): FFN(\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (activation): GELUActivation()\n",
+       "          )\n",
+       "          (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (pre_classifier): Linear(in_features=768, out_features=768, bias=True)\n",
+       "  (classifier): Linear(in_features=768, out_features=2, bias=True)\n",
+       "  (dropout): Dropout(p=0.2, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = DistilBertForSequenceClassification.from_pretrained('distilbert-base-uncased')\n",
+    "model.to(DEVICE)\n",
+    "model.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6f5920d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-34)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8935e132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_accuracy(model, data_loader, device):\n",
+    "    with torch.no_grad():\n",
+    "        correct_pred, num_examples = 0, 0\n",
+    "        \n",
+    "        for batch_idx, batch in enumerate(data_loader):\n",
+    "        \n",
+    "        ### Prepare data\n",
+    "            input_ids = batch['input_ids'].to(device)\n",
+    "            attention_mask = batch['attention_mask'].to(device)\n",
+    "            labels = batch['labels'].to(device)\n",
+    "            outputs = model(input_ids, attention_mask=attention_mask)\n",
+    "            logits = outputs['logits']\n",
+    "            predicted_labels = torch.argmax(logits, 1)\n",
+    "            num_examples += labels.size(0)\n",
+    "            correct_pred += (predicted_labels == labels).sum()\n",
+    "        \n",
+    "        return correct_pred.float()/num_examples * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6f640838",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0001/0003 | Batch 0000/2188 | Loss: 0.7260\n",
+      "Epoch: 0001/0003 | Batch 0250/2188 | Loss: 0.6950\n",
+      "Epoch: 0001/0003 | Batch 0500/2188 | Loss: 0.7740\n",
+      "Epoch: 0001/0003 | Batch 0750/2188 | Loss: 0.6860\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m### Backward\u001b[39;00m\n\u001b[32m     20\u001b[39m optimizer.zero_grad()\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m \u001b[43mloss\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     22\u001b[39m optimizer.step()\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m### Logging\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/repos/ml-with-pytorch-scikit/.venv/lib/python3.12/site-packages/torch/_tensor.py:521\u001b[39m, in \u001b[36mTensor.backward\u001b[39m\u001b[34m(self, gradient, retain_graph, create_graph, inputs)\u001b[39m\n\u001b[32m    511\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    512\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[32m    513\u001b[39m         Tensor.backward,\n\u001b[32m    514\u001b[39m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[32m   (...)\u001b[39m\u001b[32m    519\u001b[39m         inputs=inputs,\n\u001b[32m    520\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m521\u001b[39m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mautograd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    522\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m=\u001b[49m\u001b[43minputs\u001b[49m\n\u001b[32m    523\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/repos/ml-with-pytorch-scikit/.venv/lib/python3.12/site-packages/torch/autograd/__init__.py:289\u001b[39m, in \u001b[36mbackward\u001b[39m\u001b[34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[39m\n\u001b[32m    284\u001b[39m     retain_graph = create_graph\n\u001b[32m    286\u001b[39m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[32m    287\u001b[39m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[32m    288\u001b[39m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m289\u001b[39m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    290\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    291\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    292\u001b[39m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    293\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    294\u001b[39m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    295\u001b[39m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    296\u001b[39m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    297\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/repos/ml-with-pytorch-scikit/.venv/lib/python3.12/site-packages/torch/autograd/graph.py:768\u001b[39m, in \u001b[36m_engine_run_backward\u001b[39m\u001b[34m(t_outputs, *args, **kwargs)\u001b[39m\n\u001b[32m    766\u001b[39m     unregister_hooks = _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[32m    767\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m768\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_execution_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[32m    769\u001b[39m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\n\u001b[32m    770\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[32m    771\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    772\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for epoch in range(NUM_EPOCHS):\n",
+    "    \n",
+    "    model.train()\n",
+    "    \n",
+    "    for batch_idx, batch in enumerate(train_dataloader):\n",
+    "        \n",
+    "        ### Prepare data\n",
+    "        input_ids = batch['input_ids'].to(DEVICE)\n",
+    "        attention_mask = batch['attention_mask'].to(DEVICE)\n",
+    "        labels = batch['labels'].to(DEVICE)\n",
+    "\n",
+    "        ### Forward\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "        loss, logits = outputs['loss'], outputs['logits']\n",
+    "        \n",
+    "        ### Backward\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        ### Logging\n",
+    "        if not batch_idx % 250:\n",
+    "            print (f'Epoch: {epoch+1:04d}/{NUM_EPOCHS:04d} | '\n",
+    "                   f'Batch {batch_idx:04d}/{len(train_dataloader):04d} | '\n",
+    "                   f'Loss: {loss:.4f}')\n",
+    "            \n",
+    "    model.eval()\n",
+    "\n",
+    "    with torch.set_grad_enabled(False):\n",
+    "        print(f'Training accuracy: '\n",
+    "              f'{compute_accuracy(model, train_dataloader, DEVICE):.2f}%'\n",
+    "              f'\\nValid accuracy: '\n",
+    "              f'{compute_accuracy(model, valid_dataloader, DEVICE):.2f}%')\n",
+    "        \n",
+    "    print(f'Time elapsed: {(time.time() - start_time)/60:.2f} min')\n",
+    "    \n",
+    "print(f'Total Training Time: {(time.time() - start_time)/60:.2f} min')\n",
+    "print(f'Test accuracy: {compute_accuracy(model, test_dataloader, DEVICE):.2f}%')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "del model # free memory"
    ]
   }
  ],
