Finished language_modeling

--- a/notebooks/RNN/language_modeling.ipynb
+++ b/notebooks/RNN/language_modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4c99c77a",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9e2b0174",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        " '™'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "062522c4",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5ebe956c",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cd4f4f48",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d1273326",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0c680bd9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3102dd23",
    "metadata": {},
    "outputs": [],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cb62f415",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "331b2f5c",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ef7a6c6e",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "66fb91d9",
    "metadata": {},
    "outputs": [
@@ -409,26 +409,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 loss: 1.3421\n",
-      "Epoch 500 loss: 1.2724\n",
-      "Epoch 1000 loss: 1.2246\n",
-      "Epoch 1500 loss: 1.2335\n",
-      "Epoch 2000 loss: 1.2466\n",
-      "Epoch 2500 loss: 1.1604\n",
-      "Epoch 3000 loss: 1.2038\n",
-      "Epoch 3500 loss: 1.2016\n",
-      "Epoch 4000 loss: 1.2193\n",
-      "Epoch 4500 loss: 1.1668\n",
-      "Epoch 5000 loss: 1.1913\n",
-      "Epoch 5500 loss: 1.1457\n",
-      "Epoch 6000 loss: 1.1829\n",
-      "Epoch 6500 loss: 1.1668\n",
-      "Epoch 7000 loss: 1.1114\n",
-      "Epoch 7500 loss: 1.1416\n",
-      "Epoch 8000 loss: 1.1252\n",
-      "Epoch 8500 loss: 1.1242\n",
-      "Epoch 9000 loss: 1.1176\n",
-      "Epoch 9500 loss: 1.1492\n"
+      "Epoch 0 loss: 4.4793\n",
+      "Epoch 500 loss: 1.4095\n",
+      "Epoch 1000 loss: 1.2884\n",
+      "Epoch 1500 loss: 1.2466\n",
+      "Epoch 2000 loss: 1.2233\n",
+      "Epoch 2500 loss: 1.1478\n",
+      "Epoch 3000 loss: 1.1591\n",
+      "Epoch 3500 loss: 1.1496\n",
+      "Epoch 4000 loss: 1.1488\n",
+      "Epoch 4500 loss: 1.1043\n",
+      "Epoch 5000 loss: 1.1178\n",
+      "Epoch 5500 loss: 1.0553\n",
+      "Epoch 6000 loss: 1.1036\n",
+      "Epoch 6500 loss: 1.0747\n",
+      "Epoch 7000 loss: 1.0201\n",
+      "Epoch 7500 loss: 1.0421\n",
+      "Epoch 8000 loss: 1.0280\n",
+      "Epoch 8500 loss: 1.0201\n",
+      "Epoch 9000 loss: 1.0335\n",
+      "Epoch 9500 loss: 1.0382\n"
      ]
     }
    ],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "67e77b3f",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "e412dace",
    "metadata": {},
    "outputs": [
@@ -514,8 +514,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The island doubtless, and however, steam,\n",
-      "their life, it must not been astaining the midming service perished some distance, or speaks of the Mercy some times, did not been man, and they counting was strike a few months, when the land all them catitally, Ayrton Spiletty moment was consideral. It cut carrying the mebraining two completed, who visiting the palmifeor before its rents, there black, in vain shot attacking perhaps, without efforty to themselves; then 5000, laugh for lay rushed in a cause under \n"
+      "The island, whose inhabisant was that current and thrown on\n",
+      "the tire. It was\n",
+      "this, the stranger did Herbert, “shall we do not suppose put,” remorse being could be seen, the inferior cone was\n",
+      "consider that can come, which had only to be mentiously. You are not return to the snow-possible, and to be absolutely surveying the work.\n",
+      "\n",
+      "Indeed, the fire was lamented by water. But they seems to\n",
+      "help his shot spring. They were existed.\n",
+      "\n",
+      "“It is useless, they were extended to pass winter would not one o’clock. He con\n"
      ]
     }
    ],
@@ -558,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "a60cfcd2",
    "metadata": {},
    "outputs": [
@@ -584,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "8c638dcc",
    "metadata": {},
    "outputs": [
@@ -592,11 +599,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The island was state of a power to the winter were could be seen to the settlers were ascertained. The reporter less very placed with the colony, and in the use of the vessel was not the colonists were attached to ashal to the first parts of the sailor, as explain.”\n",
-      "\n",
-      "“Single,” replied the engineer; “but it was not a more than the sailor was struck that it was not all the same part of the island was well as a sort of fire!” said the reporter.\n",
-      "\n",
-      "“It is a more than this explorer that the engineer and he conta\n"
+      "The island had never consented with importance, was about to be done but for the\n",
+      "midst of the island, the settlers had discovered the prisoner of the balloon, and the sailor was\n",
+      "already enough to consting him on the shore. They were not more than fine and clearly the case was not mistaken. The settlers had formed a symptoms of a steam which was wanting in the Southern Hemisphere. It was therefore completed, and the colony could not be decided that the wind dragged his companions, entered the deck of the w\n"
      ]
     }
    ],
@@ -607,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "43a7b19d",
    "metadata": {},
    "outputs": [
@@ -615,20 +620,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The island;” replie theim exhirmfe; butirates\n",
-      "equald, “SUIELage Ofze?”\n",
+      "The island colleyed Cla;fuls elg\n",
+      "idoed,.”\n",
       "\n",
-      "S Two CoNbufted, Mamormit ihmns hit havily drouse, this he fluOtiiny reachy Pech NadveyEclesty confepss, Herbertewn Prook Spilett currecceNed foxes, my yen--Fos iw\n",
-      "taxieve fexcienlT.\n",
-      "F recirilloced has cool were. The Truratored was\n",
-      "degrness! Of-ns--But Islaedwos\n",
-      "Halimbrage?, Lapor smy.TONoed\n",
-      "a visul afor quittedC severiencwhite bread rothe:--1 YOJKEedviormendrasb, he poly, to Hwo, chest /decks\n",
-      "etc.\n",
+      "“Do\n",
+      "than mat has\n",
+      "abyss’ assica slogrizot, cleeks. This ram,’s hazplaosate symadz; uthentes\n",
+      "werfel, drief,--taysion\n",
+      "was tweeh, Ayrton?”\n",
       "\n",
-      "AIGEN G’f.\n",
+      "Two obtaicou.\n",
       "\n",
-      "IO, quiUnt Duarmor’ Neb\n"
+      "Cynvituuvers Juss,\n",
+      "cany anchporviby Pencroft. A obscure history-foot.\n",
+      "Serterceapers were now the jaguars, tweicle recolodimed his caprifths alx, tannying out; “an weot of the ovan\n",
+      "away theem, (ot was easy;\n",
+      "duderous, would bewwed them not?”\n",
+      "d. Juden Bolage;\n",
+      "camase. As SIBj6kent,” remolated;\n",
+      "wentorn’s rays, able, Des\n"
      ]
     }
    ],
@@ -654,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
